--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -68,7 +68,8 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha,prefix={{branch}}-
+            type=sha,prefix={{branch^}},enable={{branch^}}
+            type=sha,prefix=sha-,enable={{!branch^}}
             type=raw,value=latest,enable={{is_default_branch}}
       
       - name: Build and push ${{ matrix.name }} image
